# prenatal_rag_chatbot

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.claude/skills/ragas/: SKILL.md
.claude/skills/ragas/references/: installation.md  integration-langfuse.md  judge-config.md  metrics.md  pitfalls.md
backend/app/: clients.py  config.py  main.py  observability.py  sources.py
backend/app/chat/: classifier.py  guardrails.py  pipeline.py
backend/app/models/: schemas.py
backend/app/rag/: chunker.py  embedder.py  retriever.py
data/: knowledge_base_dictionary.csv  sources.json
eval/: ragas_eval.py  run_eval.py  schemas.py  test_cases.yaml  user_profiles.yaml
scripts/: debug_retrieve.py  ingest.py
